--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
               </div>
             </form>
             <!-- Accent-colored raised button with ripple -->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="myButtonClicked"()>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="myButtonClicked()" >
               Button
             </button>
           </div>
           <div class="column">
             <p> insert image below </p>
-            <img src="./favicon.jpg"
+            <img src="./favicon.jpg">
           </div>
         </div>
       </div>
