index.html edit

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
           <div class="column">
             <p> insert image below </p>
-            <img src="./favicon.jpg">
+            <img src="./favicon.jpg" alt="insert image here">
           </div>
         </div>
       </div>
