--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
                   class="mdl-textfield__input"
                   type="text"
                   pattern="-?[0-9]*(\.[0-9]+)?"
-                  id="sample2"
+                  id="number-input"
                 />
                 <label class="mdl-textfield__label" for="sample2"
                   >Number...</label
                 >
                 <span class="mdl-textfield__error">Input is not a number!</span>
               </div>
-            </form>
-            <!-- Accent-colored raised button with ripple -->
-            <button
-              class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-              onclick="myButtonClicked()"
-            >
-              Button
-            </button>
+              <!-- Accent-colored raised button with ripple -->
+              <button
+                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                onclick="myButtonClicked()"
+              >
+                Button
+              </button>
+            </form
+            <div id="number-output"></div>
           </div>
           <div class="column">
             <p>insert image below</p>
