vers2 - id instead of pop up

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               >
                 Button
               </button>
-            </form
+            </form>
             <div id="number-output"></div>
           </div>
           <div class="column">
